--- a/style.css
+++ b/style.css
@@ -13,7 +13,8 @@ body {
 }
 
 .background {
-  background: url() no-repeat center center/cover;
+  background: url("https://images.unsplash.com/photo-1556745757-8d76bdb6984b")
+    no-repeat center center/cover;
   position: absolute;
   top: -20px;
   bottom: -20px;
