--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ body {
 }
 
 .background {
-  background: url("https://images.unsplash.com/photo-1556745757-8d76bdb6984b")
+  background: url("https://images.unsplash.com/photo-1531416062945-748bb07c3514?ixlib=rb-1.2.1&ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&auto=format&fit=crop&w=1600&q=80")
     no-repeat center center/cover;
   position: absolute;
   top: -20px;
